k- tried fixing spacing between, 1/2 done

--- a/pub_html/css/flexbox.css
+++ b/pub_html/css/flexbox.css
@@ -84,9 +84,15 @@
   width: 10rem;
   margin: auto;
 }
+
+.catalogue-container{
+  align-items: flex-start;
+  align-content: space-between;
+}
+
 .section-product-catalogue{
   align-content: space-around;
-  width: 70rem;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
